Introduce basic colors (sats,tints,tones,shades) from resource files